# pipeline-test

./: .gitignore  Cargo.toml  README.md
telegram-bot/: Cargo.toml
telegram-bot/src/: bot.rs  commands.rs  err.rs  main.rs
telegram-bot/src/controllers/: mod.rs  tg_controller.rs
telegram-bot/src/handlers/: command_handler.rs  message_handler.rs  mod.rs
