[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
dotenv = "0.15.0"
teloxide = { version = "0.12.2", features = ["macros"] }
pretty_env_logger = "0.5.0"
log = "0.4.20"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
